recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.error
SpiralUse:3: error: type mismatch;
 found   : Double(0.01)
 required: Int
    spiral(1000,10,1,0.01);
                     ^